--- a/core-bundle/composer.json
+++ b/core-bundle/composer.json
@@ -26,7 +26,7 @@
         "oyejorge/less.php": "~1.7",
         "phpspec/php-diff": "~1.0",
         "simplepie/simplepie": "~1.3",
-        "tecnick.com/tcpdf": "~6.0",
+        "tecnickcom/tcpdf": "~6.0",
         "true/punycode": "~1.0",
         "contao-components/all": "~4.0"
     },
