[Core] Draft to rewrite to a service

--- a/core-bundle/src/Resources/config/services.yml
+++ b/core-bundle/src/Resources/config/services.yml
@@ -63,3 +63,10 @@ services:
         arguments:
             - "@service_container"
             - "@contao.framework"
+
+    contao.image.image_sizes:
+        class: Contao\CoreBundle\Image\ImageSizes
+        public: true
+        arguments:
+            - "@database_connection"
+            - "@event_dispatcher"
