--- a/core-bundle/composer.json
+++ b/core-bundle/composer.json
@@ -10,7 +10,7 @@
         }
     ],
     "require": {
-        "php": ">=5.4.0",
+        "php": ">=5.5.0",
         "symfony/framework-bundle": "~2.7",
         "symfony/console": "^2.7.3",
         "symfony/filesystem": "~2.7",
@@ -21,6 +21,7 @@
         "twig/twig": "~1.20",
         "doctrine/doctrine-bundle": "~1.4",
         "leafo/scssphp": "~0.1",
+        "league/uri": "~4.0",
         "matthiasmullie/minify": "~1.3",
         "michelf/php-markdown": "~1.4",
         "oyejorge/less.php": "~1.7",
