[Core] Added default configuration of the http header routes

--- a/core-bundle/src/Resources/config/listener.yml
+++ b/core-bundle/src/Resources/config/listener.yml
@@ -1,3 +1,12 @@
+parameters:
+    contao:
+        merge_http_headers_routes:
+            - contao_root
+            - contao_catch_all
+            - contao_frontend
+            - contao_frontend_cron
+            - contao_frontend_share
+
 ##
 # Listener priorities
 #
