--- a/core-bundle/src/Resources/config/listener.yml
+++ b/core-bundle/src/Resources/config/listener.yml
@@ -82,7 +82,7 @@ services:
         arguments:
             - "%contao.pretty_error_screens%"
             - "@twig"
-            - "@contao.adapter.config"
+            - "@contao.framework"
             - "@logger"
         tags:
             - { name: kernel.event_listener, event: kernel.exception, method: onKernelException, priority: 32 }
