[Core] Set the minimum stability to "dev".

--- a/core-bundle/composer.json
+++ b/core-bundle/composer.json
@@ -55,5 +55,7 @@
         "branch-alias": {
             "dev-develop": "4.1.x-dev"
         }
-    }
+    },
+    "minimum-stability": "dev",
+    "prefer-stable": true
 }
