[Core] Must initialize the Contao framework to have TL_CROP options

--- a/core-bundle/src/Resources/config/services.yml
+++ b/core-bundle/src/Resources/config/services.yml
@@ -70,3 +70,4 @@ services:
         arguments:
             - "@database_connection"
             - "@event_dispatcher"
+            - "@contao.framework"
