[Core] Use the kernel.terminate event for the command scheduler (see #244).

--- a/core-bundle/src/Resources/config/listener.yml
+++ b/core-bundle/src/Resources/config/listener.yml
@@ -40,6 +40,15 @@ services:
         tags:
             - { name: kernel.event_listener, event: kernel.terminate, method: onKernelTerminate }
 
+    contao.listener.command_scheduler:
+        class: Contao\CoreBundle\EventListener\CommandSchedulerListener
+        arguments:
+            - "@contao.framework"
+        calls:
+            - ["setContainer", ["@service_container"]]
+        tags:
+            - { name: kernel.event_listener, event: kernel.terminate, method: onKernelTerminate }
+
     contao.listener.container_scope:
         class: Contao\CoreBundle\EventListener\ContainerScopeListener
         arguments:
