[Core] Implemented the _enable_request_token attribute

--- a/core-bundle/src/Resources/config/routing.yml
+++ b/core-bundle/src/Resources/config/routing.yml
@@ -7,6 +7,7 @@ contao_backend_redirect:
     path: /contao/
     defaults:
         _scope: backend
+        _enable_request_token: true
         _controller: FrameworkBundle:Redirect:redirect
         route: contao_backend
         permanent: true
@@ -19,6 +20,7 @@ contao_root:
     path: /
     defaults:
         _scope: frontend
+        _enable_request_token: true
         _controller: ContaoCoreBundle:Frontend:index
 
 # The catch all route must be the last one!
@@ -26,6 +28,7 @@ contao_catch_all:
     path: /{_url_fragment}
     defaults:
         _scope: frontend
+        _enable_request_token: true
         _controller: ContaoCoreBundle:Frontend:index
     requirements:
         _url_fragment: .*
