--- a/core-bundle/src/Resources/config/listener.yml
+++ b/core-bundle/src/Resources/config/listener.yml
@@ -92,6 +92,14 @@ services:
         tags:
             - { name: kernel.event_listener, event: kernel.request, method: onKernelRequest }
 
+    contao.listener.bypass_maintenance:
+        class: Contao\CoreBundle\EventListener\BypassMaintenanceListener
+        arguments:
+            - "@session"
+            - "%contao.user_token_bind_to_ip%"
+        tags:
+            - { name: kernel.event_listener, event: kernel.request, method: onKernelRequest, priority: 0 }
+
     contao.listener.pretty_error_screens:
         class: Contao\CoreBundle\EventListener\PrettyErrorScreenListener
         arguments:
